# sensor_cluster

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
docker/: Dockerfile.serve  Dockerfile.train
notebooks/: 01_eda.ipynb  02_algorithm_comparison.ipynb  03_clustering_experiments.ipynb  04_feature_engineering.ipynb
src/sensorcluster/: __init__.py  cli.py  config.py  logging_setup.py
src/sensorcluster/api/: dependencies.py  main.py  routes.py  schemas.py
src/sensorcluster/data/: __init__.py  loader.py  schema.py  splits.py
src/sensorcluster/evaluation/: __init__.py  cv.py  metrics.py  report.py
src/sensorcluster/features/: __init__.py  dimreduce.py  preprocess.py
src/sensorcluster/models/: __init__.py  base.py  hdbscan_model.py  label_map.py  pipeline_model.py
src/sensorcluster/pipeline/: __init__.py  label_propagation.py  predict_batch.py  train.py
src/sensorcluster/visualization/: __init__.py  plots.py
tests/: conftest.py
tests/integration/: test_api_e2e.py  test_cv_determinism.py  test_predict_batch.py  test_predict_perf.py  test_request_id.py  test_save_is_atomic.py  test_train_pipeline.py
tests/unit/: test_api_schemas.py  test_bootstrap_stability.py  test_cli.py  test_config.py  test_features.py  test_hdbscan_model.py  test_label_map_persistence.py  test_label_propagation.py  test_label_to_int.py  test_loader.py  test_metrics.py  test_schema.py  test_splits.py
