[project]
name = "sensorcluster"
version = "0.1.0"
description = "Semi-supervised clustering of multivariate sensor data for predictive-maintenance triage and unknown-failure-mode discovery."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Amir" }]
keywords = ["clustering", "hdbscan", "predictive-maintenance", "semi-supervised", "anomaly-detection"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",
    "hdbscan>=0.8.33",
    "joblib>=1.3",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2",
    "pandera>=0.18,<0.21",
    "structlog>=24.1",
    "typer>=0.12",
    "omegaconf>=2.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "prometheus-client>=0.20",
]
train = [
    "umap-learn>=0.5.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "mlflow>=2.16,<3.0",
    "jupyterlab>=4.0",
    "pyarrow>=15.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "pandas-stubs",
]

[project.scripts]
sensorcluster = "sensorcluster.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sensorcluster"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",        # pycodestyle, pyflakes
    "I",                   # isort
    "B",                   # bugbear
    "UP",                  # pyupgrade
    "SIM",                 # simplify
    "RET",                 # return
    "RUF",                 # ruff-specific
    "N",                   # pep8-naming
    "C4",                  # comprehensions
    "PIE",                 # misc lints
]
ignore = [
    "E501",   # line length handled by formatter
    # ML convention: feature matrices are conventionally `X`, target series `y`.
    # Bending PEP-8 here loses readability for downstream consumers (sklearn, papers, etc).
    "N803",
    "N806",
    # FastAPI's standard pattern is `dep = Depends(get_thing)` in argument defaults.
    "B008",
    # pandera raises a private `SchemaError` subclass; we test against the public Exception.
    "B017",
    # Em-dashes and unicode math symbols intentionally appear in docstrings/messages.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]
"notebooks/**" = ["E402", "F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["build/", "dist/", "notebooks/", "mlruns/"]

[[tool.mypy.overrides]]
module = ["hdbscan.*", "umap.*", "pandera.*", "mlflow.*", "joblib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: end-to-end pipeline tests (slower)",
]

[tool.coverage.run]
source = ["src/sensorcluster"]
branch = true
omit = ["*/visualization/dashboard.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
